<resources>
    <string name="app_name">PS Cards Task1</string>
    <string name="btn_forgot_password">Forget Your Password?</string>
    <string name="forgot_password">Forget password?</string>
    <string name="forgot_password_msg">Just need registered Email to sent your password</string>
    <string name="hint_email">Email</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_back">Back</string>
    <string name="btn_reset_password">RESET PASSWORD</string>
    <string name="change_pass">Change Password</string>
    <string name="new_hint_email">New Email</string>
    <string name="new_hint_password">New Password</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="change_email">CHANGE EMAIL</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="send_password_reset_email">SEND PASSWORD RESET EMAIL</string>
    <string name="remove_user">REMOVE USER</string>
    <string name="btn_sign_out">SIGN OUT</string>
    <string name="txtviewSignup">IF already have Account signin NOW!!</string>


</resources>
