<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/blue_background"
    tools:context="com.example.eslamwael74.fireappbase.ForgetPassActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:id="@+id/textView2"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/forgot_password_msg"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="70dp" />



    <android.support.design.widget.TextInputLayout
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:id="@+id/email_wrapper"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/reset"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <EditText
            android:id="@+id/email"
            android:layout_width="324dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="212dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="321dp"
        android:layout_height="50dp"
        android:textColor="@android:color/white"
        android:text="RESET PASSWORD"
        android:id="@+id/reset"
        android:background="@color/colorAccent"

        android:layout_marginBottom="105dp"
        app:layout_constraintBottom_toTopOf="@+id/back"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.51" />

    <Button
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:textColor="@android:color/white"
        android:text="@string/btn_back"
        android:gravity="center"
        android:background="@null"
        android:id="@+id/back"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="61dp" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/reset"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/back" />


</android.support.constraint.ConstraintLayout>
